// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate a loader 1`] = `
Object {
  "loader": "// @flow
import DataLoader from 'dataloader';
import { connectionFromMongoCursor, mongooseLoader } from '@entria/graphql-mongoose-loader';
import type { ConnectionArguments } from 'graphql-relay';

import ExampleModel from './ExampleModel';
import type { GraphQLContext } from '../../TypeDefinition';

type ExampleType = {
  id: string,
  _id: string,
  exampleField: string,
}

export default class Example {
  id: string;
  _id: string;
  exampleField: string;

  constructor(data: ExampleType) {
    this.id = data.id;
    this._id = data._id;
    this.exampleField = data.exampleField;
  }
}

export const getLoader = () => new DataLoader(ids => mongooseLoader(ExampleModel, ids));

const viewerCanSee = () => true;

export const load = async ({ dataloaders }: GraphQLContext, id: ?string) => {
  if (!id) return null;

  try {
    const data = await dataloaders.ExampleLoader.load(id.toString());

    if (!data) return null;

    return viewerCanSee() ? new Example(data) : null;
  } catch (err) {
    return null;
  }
};

export const clearCache = ({ dataloaders }: GraphQLContext, id: string) => {
  return dataloaders.ExampleLoader.clear(id.toString());
};

export const loadExamples = async (context: GraphQLContext, args: ConnectionArguments) => {
  // TODO: specify conditions
  const examples = ExampleModel.find({});

  return connectionFromMongoCursor({
    cursor: examples,
    context,
    args,
    loader: load,
  });
};
",
}
`;

exports[`generate a loader with schema 1`] = `
Object {
  "loader": "// @flow
import DataLoader from 'dataloader';
import { connectionFromMongoCursor, mongooseLoader } from '@entria/graphql-mongoose-loader';
import type { ConnectionArguments } from 'graphql-relay';

import PostModel from './PostModel';
import type { GraphQLContext } from '../../TypeDefinition';

type PostType = {
  id: string,
  _id: string,
  title: string,
  author: string,
  slug: string,
  tags: string[],
  oldSlugs: string[],
  comments: string[],
  externalComments: string[],
  createdAt: Date,
  updatedAt: Date,
}

export default class Post {
  id: string;
  _id: string;
  title: string;
  author: string;
  slug: string;
  tags: string[];
  oldSlugs: string[];
  comments: string[];
  externalComments: string[];
  createdAt: Date;
  updatedAt: Date;

  constructor(data: PostType) {
    this.id = data.id;
    this._id = data._id;
    this.title = data.title;
    this.author = data.author;
    this.slug = data.slug;
    this.tags = data.tags;
    this.oldSlugs = data.oldSlugs;
    this.comments = data.comments;
    this.externalComments = data.externalComments;
    this.createdAt = data.createdAt;
    this.updatedAt = data.updatedAt;
  }
}

export const getLoader = () => new DataLoader(ids => mongooseLoader(PostModel, ids));

const viewerCanSee = () => true;

export const load = async ({ dataloaders }: GraphQLContext, id: ?string) => {
  if (!id) return null;

  try {
    const data = await dataloaders.PostLoader.load(id.toString());

    if (!data) return null;

    return viewerCanSee() ? new Post(data) : null;
  } catch (err) {
    return null
  };
};

export const clearCache = ({ dataloaders }: GraphQLContext, id: string) => {
  return dataloaders.PostLoader.clear(id.toString());
};

export const loadPosts = async (context: GraphQLContext, args: ConnectionArguments) => {
  // TODO: specify conditions
  const posts = PostModel.find({});

  return connectionFromMongoCursor({
    cursor: posts,
    context,
    args,
    loader: load,
  });
};
",
}
`;

exports[`generate a loader with schema and without timestamps 1`] = `
Object {
  "loader": "// @flow
import DataLoader from 'dataloader';
import { connectionFromMongoCursor, mongooseLoader } from '@entria/graphql-mongoose-loader';
import type { ConnectionArguments } from 'graphql-relay';

import UserModel from './UserModel';
import type { GraphQLContext } from '../../TypeDefinition';

type UserType = {
  id: string,
  _id: string,
  name: string,
  password: string,
  email: string,
  active: boolean,
  lastLoginAt: Date,
}

export default class User {
  id: string;
  _id: string;
  name: string;
  password: string;
  email: string;
  active: boolean;
  lastLoginAt: Date;

  constructor(data: UserType) {
    this.id = data.id;
    this._id = data._id;
    this.name = data.name;
    this.password = data.password;
    this.email = data.email;
    this.active = data.active;
    this.lastLoginAt = data.lastLoginAt;
  }
}

export const getLoader = () => new DataLoader(ids => mongooseLoader(UserModel, ids));

const viewerCanSee = () => true;

export const load = async ({ dataloaders }: GraphQLContext, id: ?string) => {
  if (!id) return null;

  try {
    const data = await dataloaders.UserLoader.load(id.toString());

    if (!data) return null;

    return viewerCanSee() ? new User(data) : null;
  } catch (err) {
    return null
  };
};

export const clearCache = ({ dataloaders }: GraphQLContext, id: string) => {
  return dataloaders.UserLoader.clear(id.toString());
};

export const loadUsers = async (context: GraphQLContext, args: ConnectionArguments) => {
  // TODO: specify conditions
  const users = UserModel.find({});

  return connectionFromMongoCursor({
    cursor: users,
    context,
    args,
    loader: load,
  });
};
",
}
`;
